--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+  sqflite: ^2.4.2
+  path: ^1.9.1
+
   # State Management
   provider: ^6.1.1
   
