--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    #- assets/images/restaurants
+    - assets/images/dishes-square
     - assets/icons/
 
 
